ada status completed dan uncompleted per task, complete button di task detail working

--- a/app/src/main/res/layout/task_row.xml
+++ b/app/src/main/res/layout/task_row.xml
@@ -10,6 +10,7 @@
     android:elevation="0dp"
     app:cardBackgroundColor="#FFFFFF"
     android:contextClickable="true"
+    android:animateLayoutChanges="true"
     app:cardCornerRadius="8dp">
 
     <LinearLayout
