added recyler view for friend List

--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -21,7 +21,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="350dp"
-                android:layout_height="180dp"
+                android:layout_height="200dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
@@ -38,7 +38,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="20dp">
 
 
                         <ImageView
@@ -47,7 +48,7 @@
                             android:layout_height="60dp"
                             android:layout_marginTop="5dp"
                             android:layout_weight="0"
-                            app:srcCompat="@android:drawable/btn_star_big_off" />
+                            android:background="@drawable/user_profile" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -82,117 +83,33 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="155dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/txtNumCompleteTask"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="5dp"
-                                android:fontFamily="@font/montserrat"
-                                android:text="Number"
-                                android:textColor="@color/black" />
-
-                            <TextView
-                                android:id="@+id/txtCompleteTask"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/montserrat"
-                                android:text="Completed Task"
-                                android:textColor="@color/grey" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="155dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/txtNumCreatedTask"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="5dp"
-                                android:fontFamily="@font/montserrat"
-                                android:text="Number"
-                                android:textColor="@color/black" />
-
-                            <TextView
-                                android:id="@+id/txtCreateTask"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/montserrat"
-                                android:text="Created Task"
-                                android:textColor="@color/grey" />
-
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="350dp"
-                android:layout_height="180dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="20dp"
-                app:cardCornerRadius="10dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/white"
-                    android:orientation="vertical"
-                    android:padding="20dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="80dp"
-                        android:orientation="horizontal">
-
+                        android:orientation="vertical"
+                        >
 
                         <TextView
-                            android:id="@+id/textView12"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/txtNumCreatedTask"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Statistic"
-                            android:textColor="@color/black" />
-                    </LinearLayout>
+                            android:layout_marginBottom="5dp"
+                            android:fontFamily="@font/montserrat"
+                            android:text="Number"
+                            android:textColor="@color/black"
+                            android:gravity="center"
+                            android:textSize="20sp"/>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="155dp"
+                        <TextView
+                            android:id="@+id/txtCreateTask"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:orientation="vertical">
+                            android:fontFamily="@font/montserrat"
+                            android:text="Created Task"
+                            android:textColor="@color/grey"
+                            android:gravity="center"
+                            android:textSize="20sp"/>
 
 
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="155dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:orientation="vertical">
 
 
-                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -209,7 +126,7 @@
                 android:layout_marginRight="30dp"
                 android:background="@color/colorPrimary"
                 android:fontFamily="@font/montserrat"
-                android:text="Setting" />
+                android:text="Log Out" />
 
 
         </LinearLayout>
