--- a/app/src/main/res/layout/friend_row.xml
+++ b/app/src/main/res/layout/friend_row.xml
@@ -36,9 +36,9 @@
 
             <ImageView
                 android:id="@+id/ProfPic"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/user" />
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:background="@drawable/user_profile" />
         </LinearLayout>
 
 
