--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -60,8 +60,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="20dp">
+                    android:orientation="vertical"
+                    android:padding="20dp"
+                    android:layout_marginBottom="10dp">
 
                     <TextView
                         android:id="@+id/textView13"
@@ -71,15 +72,16 @@
                         android:fontFamily="@font/montserrat"
                         android:text="For"
                         android:textColor="@color/black"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:layout_margin="10dp"/>
 
                     <EditText
                         android:id="@+id/edtFor"
-                        android:layout_width="wrap_content"
+                        android:layout_width="320dp"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="20dp"
                         android:background="@drawable/edittextshape"
-                        android:ems="5"
+                        android:layout_margin="10dp"
                         android:fontFamily="@font/montserrat"
                         android:textColor="@color/black"
                         android:inputType="textPersonName"
@@ -89,23 +91,24 @@
                         android:id="@+id/textView14"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
                         android:layout_marginRight="10dp"
                         android:fontFamily="@font/montserrat"
                         android:text="In"
                         android:textColor="@color/black"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:layout_margin="10dp"/>
 
                     <EditText
                         android:id="@+id/edtIn"
-                        android:layout_width="wrap_content"
+                        android:layout_width="320dp"
                         android:layout_height="wrap_content"
                         android:background="@drawable/edittextshape"
-                        android:ems="5"
+
                         android:fontFamily="@font/montserrat"
                         android:inputType="textPersonName"
                         android:textColor="@color/black"
-                        android:padding="10dp" />
+                        android:padding="10dp"
+                        android:layout_margin="10dp"/>
                 </LinearLayout>
 
                 <EditText
@@ -114,7 +117,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
                     android:background="@color/greyWhite"
-                    android:ems="10"
+                    android:ems="20"
                     android:fontFamily="@font/montserrat"
                     android:hint="Name"
                     android:inputType="textPersonName"
@@ -205,7 +208,8 @@
                     android:ems="5"
                     android:fontFamily="@font/montserrat"
                     android:inputType="textPersonName"
-                    android:padding="10dp" />
+                    android:padding="10dp"
+                    android:textColor="@color/black"/>
 
                 <Button
                     android:id="@+id/btnAddTask"
