--- a/app/src/main/res/layout-v26/project_row.xml
+++ b/app/src/main/res/layout-v26/project_row.xml
@@ -28,23 +28,14 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/circle_project"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/circle_purple" />
+            android:layout_weight="0.8"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_edtTitle"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
-                android:text="@string/project"
-                android:textColor="#000000" />
+                android:text="@string/project" />
 
         </LinearLayout>
 
