--- a/app/src/main/res/layout/project_dialog.xml
+++ b/app/src/main/res/layout/project_dialog.xml
@@ -49,13 +49,13 @@
                 android:layout_marginLeft="20dp"/>
 
             <EditText
-                android:layout_width="match_parent"
                 android:id="@+id/edtTitle"
-                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
-                >
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:textColor="#000000">
 
             </EditText>
 
