--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -53,62 +53,62 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="883dp"
+                android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
                     android:orientation="vertical"
-                    android:padding="20dp">
+                    android:padding="20dp"
+                    android:layout_marginBottom="10dp">
 
                     <TextView
                         android:id="@+id/textView13"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
                         android:layout_marginRight="10dp"
                         android:fontFamily="@font/montserrat"
                         android:text="For"
                         android:textColor="@color/black"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:layout_margin="10dp"/>
 
-                    <AutoCompleteTextView
+                    <EditText
                         android:id="@+id/edtFor"
                         android:layout_width="320dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
                         android:layout_marginRight="20dp"
                         android:background="@drawable/edittextshape"
+                        android:layout_margin="10dp"
                         android:fontFamily="@font/montserrat"
+                        android:textColor="@color/black"
                         android:inputType="textPersonName"
-                        android:padding="10dp"
-                        android:textColor="@color/black" />
+                        android:padding="10dp" />
 
                     <TextView
                         android:id="@+id/textView14"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
                         android:layout_marginRight="10dp"
                         android:fontFamily="@font/montserrat"
                         android:text="In"
                         android:textColor="@color/black"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:layout_margin="10dp"/>
 
-                    <AutoCompleteTextView
+                    <EditText
                         android:id="@+id/edtIn"
                         android:layout_width="320dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-
                         android:background="@drawable/edittextshape"
+
                         android:fontFamily="@font/montserrat"
                         android:inputType="textPersonName"
+                        android:textColor="@color/black"
                         android:padding="10dp"
-                        android:textColor="@color/black" />
+                        android:layout_margin="10dp"/>
                 </LinearLayout>
 
                 <EditText
@@ -122,8 +122,8 @@
                     android:hint="Name"
                     android:inputType="textPersonName"
                     android:padding="20dp"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/black" />
+                    android:textColorHint="@color/black"
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:id="@+id/taskdesc"
@@ -144,10 +144,10 @@
                     android:layout_marginRight="20dp"
                     android:background="@color/greyWhite"
                     android:ems="10"
+                    android:textColor="@color/black"
                     android:gravity="start|top"
                     android:inputType="textMultiLine"
-                    android:padding="20dp"
-                    android:textColor="@color/black" />
+                    android:padding="20dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -197,9 +197,9 @@
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
-                <AutoCompleteTextView
+                <EditText
                     android:id="@+id/edtMember"
-                    android:layout_width="343dp"
+                    android:layout_width="320dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
@@ -209,10 +209,7 @@
                     android:fontFamily="@font/montserrat"
                     android:inputType="textPersonName"
                     android:padding="10dp"
-                    android:dropDownVerticalOffset="500dp"
-                    android:dropDownHeight="100dp"
-                    android:dropDownAnchor="@id/textView16"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"/>
 
                 <Button
                     android:id="@+id/btnAddTask"
