--- a/app/src/main/res/layout/fragment_month.xml
+++ b/app/src/main/res/layout/fragment_month.xml
@@ -25,11 +25,47 @@
                 android:focusedMonthDateColor="@color/colorPrimary"
                 />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/tasklist"
+            <TextView
+                android:id="@+id/textView2"
                 android:layout_width="match_parent"
-                android:layout_height="368dp"
-                android:layout_marginTop="25dp" />
+                android:layout_height="wrap_content"
+                android:text="Today"
+                android:textColor="@color/grey"
+                android:textSize="18sp"
+                android:fontFamily="@font/montserrat"
+                android:padding="10dp"/>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tomorrow"
+                android:textColor="@color/grey"
+                android:textSize="18sp"
+                android:fontFamily="@font/montserrat"
+                android:padding="10dp"/>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Upcoming"
+                android:textColor="@color/grey"
+                android:textSize="18sp"
+                android:fontFamily="@font/montserrat"
+                android:padding="10dp"/>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </LinearLayout>
 
     </ScrollView>
