--- a/app/src/main/res/layout/task_row.xml
+++ b/app/src/main/res/layout/task_row.xml
@@ -33,14 +33,14 @@
             android:padding="3dip"
             android:visibility="visible">
 
-            <ImageView
+            <TextView
                 android:id="@+id/task_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="o"
                 android:textColor="#444444"
                 android:textSize="20sp"
-                android:visibility="visible"
-                app:srcCompat="@drawable/ic_excited" />
+                android:visibility="visible" />
         </LinearLayout>
 
 
